* Styling for \<sub\> * Import the italic fonts as well to fix spacing issues

--- a/css/main.scss
+++ b/css/main.scss
@@ -49,6 +49,10 @@ pre.highlight code,
     margin: 0 20px 10px;
 }
 
+.footnote {
+  vertical-align:super ;
+}
+
 .user-image {
   margin-bottom: 1.2em;
   position: relative;
